[package]
name = "icoutils-rs"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Drop-in replacement of `icotool` from `icoutils`, implemented in Rust."
readme = "README.md"
repository = "https://github.com/BLumia/icoutils-rs"
categories = ["command-line-utilities"]
rust-version = "1.85.0"

[[bin]]
name = "icotool"
path = "src/main.rs"

[dependencies]
ico = "0.5"
png = "0.17"
